Bug 1302040 - don't enter buffering while prerolling. r=cpearce

MozReview-Commit-ID: Br9wC8PNorA

--HG--
extra : rebase_source : b8f878a25d168f040e63833afa0f436c090ba684